--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -38,7 +38,7 @@ body {
     border-radius: 10px;
     margin: auto auto 25px auto;
     width: 200px;
-    background-color: #5d8052;
+    background-color: #10593a;
     color: white;
 
   }
